// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shape() should fail 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a number",
      "path": "a",
    },
  ],
  "message": "Value should have a valid shape",
  "path": "",
}
`;

exports[`shape() should fail 2`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a string",
      "path": "b",
    },
  ],
  "message": "Value should have a valid shape",
  "path": "",
}
`;

exports[`shape() should fail and return all errors 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a number",
      "path": "a",
    },
    Object {
      "children": null,
      "message": "Value should be a string",
      "path": "b",
    },
  ],
  "message": "Value should have a valid shape",
  "path": "",
}
`;

exports[`shape() should fail and return only the first error 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a number",
      "path": "a",
    },
  ],
  "message": "Value should have a valid shape",
  "path": "",
}
`;

exports[`shape() should support custom message 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a string",
      "path": "b",
    },
  ],
  "message": "Custom message",
  "path": "",
}
`;
